@@ -14,23 +14,23 @@
 
 package com.liferay.google.mail.groups.hook.service.impl;
 
-import com.liferay.google.mail.groups.util.GoogleDirectoryUtil;
+import com.liferay.google.apps.connector.util.GoogleDirectoryUtil;
 import com.liferay.google.mail.groups.util.GoogleMailGroupsUtil;
 import com.liferay.portal.kernel.dao.orm.QueryUtil;
 import com.liferay.portal.kernel.exception.PortalException;
 import com.liferay.portal.kernel.messaging.DestinationNames;
 import com.liferay.portal.kernel.messaging.MessageBusUtil;
+import com.liferay.portal.kernel.model.Group;
+import com.liferay.portal.kernel.model.User;
 import com.liferay.portal.kernel.process.ProcessCallable;
 import com.liferay.portal.kernel.process.ProcessException;
+import com.liferay.portal.kernel.service.GroupLocalService;
+import com.liferay.portal.kernel.service.GroupLocalServiceUtil;
+import com.liferay.portal.kernel.service.GroupLocalServiceWrapper;
+import com.liferay.portal.kernel.service.ServiceContext;
+import com.liferay.portal.kernel.service.UserLocalServiceUtil;
 import com.liferay.portal.kernel.util.OrderByComparator;
 import com.liferay.portal.kernel.workflow.WorkflowConstants;
-import com.liferay.portal.model.Group;
-import com.liferay.portal.model.User;
-import com.liferay.portal.service.GroupLocalService;
-import com.liferay.portal.service.GroupLocalServiceUtil;
-import com.liferay.portal.service.GroupLocalServiceWrapper;
-import com.liferay.portal.service.ServiceContext;
-import com.liferay.portal.service.UserLocalServiceUtil;
 
 import java.io.Serializable;
 
@@ -73,7 +73,8 @@ public class GoogleMailGroupsGroupLocalServiceImpl
 	public Group updateGroup(
 			long groupId, long parentGroupId, String name, String description,
 			int type, boolean manualMembership, int membershipRestriction,
-			String friendlyURL, boolean active, ServiceContext serviceContext)
+			String friendlyURL, boolean inheritContent, boolean active,
+			ServiceContext serviceContext)
 		throws PortalException {
 
 		Group group = GroupLocalServiceUtil.getGroup(groupId);
@@ -84,7 +85,8 @@ public class GoogleMailGroupsGroupLocalServiceImpl
 
 		group = super.updateGroup(
 			groupId, parentGroupId, name, description, type, manualMembership,
-			membershipRestriction, friendlyURL, active, serviceContext);
+			membershipRestriction, friendlyURL, inheritContent, active,
+			serviceContext);
 
 		MessageBusUtil.sendMessage(
 			DestinationNames.ASYNC_SERVICE,
@@ -125,10 +127,11 @@ public class GoogleMailGroupsGroupLocalServiceImpl
 					_group.getDescriptiveName(), groupEmailAddress);
 
 				LinkedHashMap<String, Object> userParams =
-					new LinkedHashMap<String, Object>();
+					new LinkedHashMap<>();
 
 				userParams.put("inherit", Boolean.TRUE);
-				userParams.put("usersGroups", new Long(_group.getGroupId()));
+				userParams.put(
+					"usersGroups", Long.valueOf(_group.getGroupId()));
 
 				List<User> users = UserLocalServiceUtil.search(
 					_group.getCompanyId(), null,
